--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/paper/dist/paper-full.js"
+            ]
           },
           "configurations": {
             "production": {
