--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:github":"ng build --prod --base-href https://jasperbosch.github.io/yjs-asswsr/",
+    "publish:github": "ngh -no-slient"
   },
   "private": true,
   "dependencies": {
