--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
@@ -49,7 +50,6 @@
     "@types/ws": "^7.2.6",
     "codelyzer": "^6.0.0-next.1",
     "enhanced-resolve": "^3.3.0",
-    "express": "^4.17.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
