--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^3.9.6",
+    "typescript": "^3.9.6"
   },
   "engines": {
     "node": "12.18.2",
