--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/compiler-cli": "~10.0.2",
     "@angular/core": "~10.0.2",
     "@angular/forms": "~10.0.2",
+    "@angular/material": "^10.1.1",
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
@@ -32,16 +33,16 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "express": "^4.17.1",
     "ngx-countdown": "^10.0.0",
     "node-notifier": "^7.0.1",
     "paper": "0.12.8",
     "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "express": "^4.17.1",
     "uuid": "^8.2.0",
-    "ws": "^7.3.1"
+    "ws": "^7.3.1",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
