--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "angular-responsive-carousel": "^1.2.9",
     "express": "^4.17.1",
     "ngx-countdown": "^10.0.0",
     "node-notifier": "^7.0.1",
